# GB-EMU_Tizen

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  emc_main.cpp
core/cartridge/: cartridge.cpp  cartridge.h
core/cartridge/IMBC/: IMBC.h
core/cartridge/IMBC/type_cartridge/: MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  MBC3.h  MBC5.cpp  MBC5.h
core/cpu/: cpu.cpp  cpu.h
core/cpu/APU/: apu.cpp  apu.h
core/cpu/mmu/: mmu.cpp  mmu.h
core/cpu/ppu/: ppu.cpp  ppu.h
core/cpu/timer/: timer.cpp  timer.h
core/state/: state.h
res/: config.xml
src/: index.html
tools/: serve-roms.py
